--- a/.github/linters/.stylelintrc.json
+++ b/.github/linters/.stylelintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "no-missing-end-of-source-newline": null,
     "max-line-length": null,
-    "color-hex-length": null
+    "color-hex-length": null,
+    "color-hex-case": null
   }
 }
